# vani

./: .env.example  .gitignore  CLAUDE.md  README.md  RELEASE.txt  pyproject.toml  version.yaml
docs/implementation/: v0-phase-0.md  v0-phase-1.md  v1-phase-0.md
docs/requirements_ukr/: architecture-v0.1.uk.md  roadmap-v0.1.uk.md  roadmap-v0.2.uk.docx  specification-v1.8.uk.docx
specification/Vani_eng/: Vani_architecture_v0.1_EN.md  Vani_roadmap_v0.2_EN.md  Vani_specification_v1.8_EN.md
specification/Vani_ukr/: Vani_architecture_v0.1.docx  architecture_v0.1.md  vani_article_full_uk.md  voice_assistant_master_spec_v1.8.md
specification/architecture/: architecture-v0.1.en.md
specification/missions/: vani-article.en.md
specification/requirements/: specification-v1.8.en.md
specification/roadmap/: roadmap-v0.2.en.md
src/: __init__.py  engine.py  version.py
src/app/: __init__.py  tui_main.py
src/astro/: __init__.py
src/background/: __init__.py
src/config/: __init__.py  config.py
src/contracts/: __init__.py  confidence.py  documents.py  pipeline.py
src/core/: __init__.py  canon.py
src/delivery/: __init__.py
src/device/: __init__.py
src/facets/: __init__.py
src/guardian/: __init__.py  guardrail.py
src/io/: __init__.py
src/line/: __init__.py
src/llm/: __init__.py  client.py  prompt.py
src/planner/: __init__.py  perception.py  router.py
src/portrait/: __init__.py
src/server/: __init__.py
src/state/: __init__.py  json_store.py  repository.py
src/telemetry/: __init__.py  cost.py  logging.py
src/tui/: app.py  (+1 more)
tests/: conftest.py
(+46 files in other folders)
